--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "clean": "rm -rf .next node_modules",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
+    "fix": "npm run lint:fix && npm run format"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -36,9 +40,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^15.3.1",
     "postcss": "^8",
+    "prettier": "3.6.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
