--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "next": "latest",
+    "next-navigation-guard": "^0.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
