--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tiptap/extension-file-handler": "^3.10.5",
     "@tiptap/extension-image": "^3.10.5",
     "@tiptap/extension-link": "^3.10.5",
     "@tiptap/extension-placeholder": "^3.10.5",
